[package]
name = "pagina_web2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde={version = "1.0.0",features = ["derive"]}
yew = { version = "0.21", features = ["csr"] }
web-sys = {version ="0.3.88",features = ["Event","InputEvent"]}
wasm-bindgen = "0.2.111"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.62"
